projects/rawkode.academy/zitadel/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ngrok
  namespace: ngrok
spec:
  controllerName: ngrok.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ngrok
  namespace: ngrok
spec:
  gatewayClassName: ngrok
  listeners:
    - name: ngrok
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ngrokcert
---
